# cargo-bug-poc

./: .gitignore
lib/: Cargo.toml
lib/src/: lib.rs
prog/: Cargo.toml
prog/src/: main.rs
